--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <!-- quotes slide show -->
  <div class="sliderContainer">
-      <div class="owl-carousel owl-theme owl-loaded" style="font-style: italic;">
+      <!-- <div class="owl-carousel owl-theme owl-loaded" style="font-style: italic;"> -->
         <div class="slider">
           <img src="images/banner0.jpg" alt="Owl Image">
         </div>
@@ -88,7 +88,7 @@
         <div class="slider">
           <img src="images/banner3.jpg" alt="Owl Image">
         </div>
-      </div>
+      <!-- </div> -->
 
 
 
