--- a/index_somechanges.html
+++ b/index_somechanges.html
@@ -70,7 +70,7 @@
 
       <!-- quotes slide show -->
  <div class="sliderContainer">
-      <div class="owl-carousel owl-theme owl-loaded" style="font-style: italic;">
+      <!-- <div class="owl-carousel owl-theme owl-loaded" style="font-style: italic;"> -->
         <div class="slider">
           <img src="images/banner0.jpg" alt="Owl Image">
         </div>
@@ -94,7 +94,7 @@
         <div class="slider">
           <img src="images/banner3.jpg" alt="Owl Image">
         </div>
-      </div>
+      <!-- </div> -->
 
 
 
