--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Note: Please use our back link in your site (webthemez.com)
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>HTML5 Responsive coming soon page - Matrix</title>
+<title>BrainHR IT Solutions</title>
 <meta name="description" content="">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
@@ -23,7 +23,7 @@ Note: Please use our back link in your site (webthemez.com)
 <div id="Content" class="wrapper topSection">
 	<div id="Header">
 	<div class="wrapper">
-		<div class="logo"><h1><img src="images/logo1.png" />MATRIX</h1>	</div>
+		<div class="logo"><h1><img src="images/logo1.png" />BrainHR IT Solutions</h1>	</div>
 		</div>
 	</div>
 	<h2>We are coming soon!!!</h2> 	
