Update career page

--- a/careers/career1.html
+++ b/careers/career1.html
@@ -1,44 +1,36 @@
 <div class="modal fade" id="career1" role="dialog">
-  <div class="modal-dialog">
-      <div class="modal-content">
-              <div class="modal-header">
-                      <button type="button" class="btn  btn-danger" data-dismiss="modal">Close</button>
-                           <h4 class="modal-title">Job  Requirements</h4>
-              </div>
-              <div class="modal-body">
-                      <h2> Scrum Master</h2>
-                      <i class="fa fa-map-marker"></i> New Jersey, United States <br> <br>
-                      <p>Brain Wave IT Solutions is looking for a talented Scrum master. The Agile Scrum Master is responsible
-                         for end-to-end management and delivery of a material change for a project of high complexity across
-                         multiple departments within a single business unit. The Scrum Master facilitates the Agile methodology and
-                         activities, manages, leads and directs the work efforts of resources that are functionally aligned
-                         as part of the project team. </p>
-
-                      <h1>Experience</h1>
-                      <ul>
-                              <li> Certified Scrum Master or Certified Scrum Professional (CSM or CSP) </li>
-                              <li> Knowledge of and experience in the machine learning/predictive analytics space strongly desired</li>
-                              <li> BA/BS or equivalent work experience required</li>
-                              <li> 3+ years of experience practicing Scrum and Lean Startup methodologies</li>
-                      </ul>
-
-                      <h1>Responsibilities</h1>
-                      <ul>
-                            <li>Facilitate meetings and discussions
-                            <li>Keep artifacts organized, updated and visible</li>
-                            <li>Perform ongoing assessments of the teams' Agile maturity and implement iterations as needed</li>
-                            <li>Partner with product owners to ensure vision, road-map and personas are well defined</li>
-                            <li>Help teams continuously reflect and improve, becoming more effective in their roles and
-                              increasing their predictability, collaboration and quality practices</li>
-                            <li>Guide teams to understand the "why" behind the practices - sprint events (stand-ups, demos, retrospectives),
-                              road-mapping, backlog management (definition, grooming, prioritization)</li>
-                            <li>Cultivate communities of practice</li>
-                            <li>Embody a servant leadership mindset and learn when to challenge teams and when to get out of the way.</li>
-                            <li>Grow your skill-set, learn new tools and techniques, and proactively develop innovative solutions</li>
-
-                      </ul>
-
-              </div>
+        <div class="modal-dialog">
+            <div class="modal-content">
+                    <div class="modal-header">
+                            <button type="button" class="btn  btn-danger" data-dismiss="modal">Close</button>
+                                 <h4 class="modal-title">Job  Requirements</h4>
+                    </div>
+                    <div class="modal-body">
+                            <h2> Software Developer</h2>
+                            <i class="fa fa-map-marker"></i> New Jersey, United States <br> <br>
+                            <p>BrainHR IT Solutions is looking for a talented Software Developer. The Software Developer will be involved in all phases of Software Development Life Cycle. Work location: Iselin, NJ and various unanticipated locations throughout the U.S. </p>
+                            <h1>Experience</h1>
+                            <ul>
+                                    <li> Bachelor's degree in Science, Technology or Engineering</li>
+                                    <li> 2+ years of experience in job offered or related occupation is required.</li>
+                                    <li> Skills required: Java, JavaScript, Spring Boot, CSS, Jenkins, SOAP UI, NodeJS, IBM DB2 and JUnit</li>
+                            </ul>
+      
+                            <h1>Responsibilities</h1>
+                            <ul>
+                                  <li> Design, develop, implement,test and deploy web-based applications.
+                                  <li> Create and implement workflow framework, and analytical dashboards</li>
+                                  <li> Build and develop scripts to create database objects and transfer data between databases</li>
+                                  <li> Perform code reviews and debugging</li>
+                                  <li> Troubleshoot, identify defects, and resolve issues</li>
+                            </ul>
+                            <p> Send Resume to HR Dept., BrainHR IT Solutions, Inc., 33 Wood Ave South, Suite 414,
+                              Iselin, NJ 08830. <br />
+                              Should the candidate accept employment with BrainHR IT Solutions, Inc., the
+                              referring employee will be eligible to receive an award of $1,000.00 for the successful
+                              referral.</p>
+                    </div>
+            </div>
+        </div>
       </div>
-  </div>
-</div>
+      
