--- a/careers/careers.html
+++ b/careers/careers.html
@@ -4,7 +4,7 @@
 
     <div class="row">
        <div class="col-xs-12 col-sm-6  col-lg-6">
-            <a href="#career1"  data-toggle="modal" > Scrum Master <br>  <i class="fa fa-map-marker"></i> New Jersey, United States </a>
+            <a href="#career1"  data-toggle="modal" > Software Developer <br>  <i class="fa fa-map-marker"></i> New Jersey, United States </a>
        </div>
 
        <div class="col-xs-12   col-sm-6 col-lg-6 ">
