Refactor career posting
Signed-off-by: brainhrits <120792389+brainhrits@users.noreply.github.com>

--- a/careers/career1.html
+++ b/careers/career1.html
@@ -8,17 +8,18 @@
                     <div class="modal-body">
                             <h2> Software Developer</h2>
                             <i class="fa fa-map-marker"></i> New Jersey, United States <br> <br>
-                            <p>BrainHR IT Solutions is looking for a talented Software Developer. The Software Developer will be involved in all phases of Software Development Life Cycle. Work location: Iselin, NJ and various unanticipated locations throughout the U.S. </p>
+                            <p>BrainHR IT Solutions is looking for a talented Software Developer. Work location: Iselin, NJ and various unanticipated locations throughout the U.S. </p>
                             <h1>Experience</h1>
                             <ul>
-                                    <li> Bachelor's degree in Science, Technology or Engineering</li>
-                                    <li> 2+ years of experience in job offered or related occupation is required.</li>
+                                    <li> Bachelor's degree in Science, Technology or Engineering (any) </li>
+                                    <li> 2 years of experience in job offered or related occupation is required.</li>
                                     <li> Skills required: Java, JavaScript, Spring Boot, CSS, Jenkins, SOAP UI, NodeJS, IBM DB2 and JUnit</li>
                             </ul>
       
                             <h1>Responsibilities</h1>
                             <ul>
-                                  <li> Design, develop, implement,test and deploy web-based applications.
+                                  <li> Design, develop, implement,test and deploy web-based applications. </li>
+                                  <li> Involve in all phases of Software Development Life Cycle. </li>  
                                   <li> Create and implement workflow framework, and analytical dashboards</li>
                                   <li> Build and develop scripts to create database objects and transfer data between databases</li>
                                   <li> Perform code reviews and debugging</li>
