Update Address 2 in website
Signed-off-by: brainhrits <120792389+brainhrits@users.noreply.github.com>

--- a/contactUs/contactUs.html
+++ b/contactUs/contactUs.html
@@ -9,6 +9,7 @@
 				<li style="padding-bottom: 15px;">
           <i class="fa fa-map-marker"></i><span style="margin-left: 3px;">Our offices are at</span><br>
           <span ng-class="usAdd">USA: 33 Wood Avenue South, Suite 402, Iselin NJ-08830, USA </span><br>
+          <span ng-class="usAdd">USA: 216 Unit D-2 Stelton Road Piscataway New Jersey 08854 </span><br>
           <span ng-class="indiaAdd">India: 44, Floor 1, Methanagar, M.M Colony, Chennai TN-600051, India</span><br>
 				</li>
 				<li style="padding-bottom: 15px;">
@@ -76,6 +77,3 @@
 <!-- <script src="ContactUs/jquery-2.1.0.min.js"></script>-->
  <!-- User defined java script files -->
  <script src="contactUs/app.js"></script> 
-
-
-
